--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pynacl
 #discord.py [voice, speed] >= 2.4.0
 discord.py [voice, speed] @ git+https://github.com/Rapptz/discord.py
 pip
-yt-dlp
+yt-dlp >= 2025.1.15
 colorlog
 colorama >= 0.4.6; sys_platform == 'win32'
 cffi --only-binary all; sys_platform == 'win32'
